--- a/app/src/main/res/layout/activity_add_city.xml
+++ b/app/src/main/res/layout/activity_add_city.xml
@@ -1,20 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_add_city"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="itea.forecast.AddCityActivity">
 
-    <AutoCompleteTextView
-        android:text="AutoCompleteTextView"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/tbSearchToolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        xmlns:android="http://schemas.android.com/apk/res/android">
+        <EditText
+            android:layout_marginRight="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/etSearchTB"
+            android:textColor="@android:color/white"
+            android:hint="Search..."
+            android:textColorHint="@android:color/white"/>
+    </android.support.v7.widget.Toolbar>
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/lvSearchResults"
+        android:layout_below="@+id/tbSearchToolbar" />
+
+    <ProgressBar
+        style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/pbLoading"
+        android:layout_marginTop="30dp"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:id="@+id/autoCompleteTextView" />
+        android:layout_centerHorizontal="true"
+        android:visibility="gone" />
+
+
 </RelativeLayout>
