--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="itea.forecast.MainActivity">
+    tools:context="itea.forecast.MainActivity"
+    >
 
     <ListView
         android:layout_width="match_parent"
@@ -12,4 +14,27 @@
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
         android:id="@+id/lvCities" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:weightSum="10">
+        <View
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="9"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:layout_marginRight="6dp"
+            android:layout_marginBottom="24dp"
+            android:layout_gravity="bottom"
+            app:srcCompat="@drawable/ic_add_white_24dp"
+            android:id="@+id/fabAddCity"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
 </RelativeLayout>
