--- a/app/src/main/res/layout/add_city_each_item.xml
+++ b/app/src/main/res/layout/add_city_each_item.xml
@@ -1,6 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/tvCityName"
+    android:weightSum="2"
+    android:padding="24dp">
 
+    <TextView
+        android:text="TextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/tvAddCityName"
+        android:textSize="24dp"
+        android:layout_weight="1"
+        android:textColor="@android:color/black"/>
+
+    <Button
+        android:text="add"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnAddCity"
+        android:layout_weight="1"
+        style="@style/Widget.AppCompat.Button.Borderless.Colored"
+        tools:text="add" />
 </LinearLayout>
