--- a/app/src/main/res/layout/list_city_each_item.xml
+++ b/app/src/main/res/layout/list_city_each_item.xml
@@ -1,40 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="12dp"
-    android:paddingRight="12dp">
-    <ImageView
-        android:id="@+id/ivBackground"
+    android:layout_height="75dp"
+    android:orientation="vertical">
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        tools:ignore="ContentDescription"
-        android:src="@drawable/defaultweather"/>
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/ivBackground"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:scaleType="centerCrop"
+            android:src="@drawable/defaultweather"
+            tools:ignore="ContentDescription" />
+    </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:weightSum="2">
+
         <TextView
-            android:text="Test"
             android:id="@+id/tvCityName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColor="@android:color/background_light" />
+            android:text="Test"
+            android:layout_gravity="center"
+            android:layout_marginLeft="12dp"
+            android:textColor="@android:color/background_light"
+            android:textSize="24dp" />
 
         <TextView
-            android:text="Test"
             android:id="@+id/tvCityTemp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:text="Test"
+            android:layout_gravity="center"
+            android:layout_marginRight="12dp"
             android:textAlignment="textEnd"
-            android:textColor="@android:color/background_light" />
+            android:textColor="@android:color/background_light"
+            android:textSize="24dp" />
     </LinearLayout>
 
 </RelativeLayout>
