--- a/app/src/main/res/layout/list_city_each_item.xml
+++ b/app/src/main/res/layout/list_city_each_item.xml
@@ -11,12 +11,11 @@
 
         <ImageView
             android:id="@+id/ivBackground"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/defaultweather"
             tools:ignore="ContentDescription" />
     </LinearLayout>
 
@@ -36,6 +35,14 @@
             android:layout_marginLeft="12dp"
             android:textColor="@android:color/background_light"
             android:textSize="24dp" />
+
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/pbCityLoading"
+            android:layout_weight="1"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/tvCityTemp"
