--- a/app/src/main/res/layout/activity_city.xml
+++ b/app/src/main/res/layout/activity_city.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_city"
     android:layout_width="match_parent"
@@ -10,38 +11,123 @@
         android:id="@+id/ivCityActivityBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/defaultweather" />
+        android:scaleType="centerCrop" />
 
-    <LinearLayout
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:background="@drawable/shadow_gradient_toptobottom" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/shadow_gradient_bottomtotop" />
+
+
+    <com.sothree.slidinguppanel.SlidingUpPanelLayout
+        android:id="@+id/slidePanel"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:weightSum="2">
+        android:gravity="bottom"
+        app:umanoPanelHeight="55dp"
+        app:umanoParallaxOffset="100dp"
+        app:umanoShadowHeight="4dp">
 
-
-        <TextView
-            android:id="@+id/tvCityActivityCityName"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Kiev"
-            android:textAlignment="center"
-            android:textAppearance="@android:style/TextAppearance.Material.Large"
-            android:textColor="@color/colorLabel"
-            android:textSize="30sp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:weightSum="3">
 
-        <TextView
-            android:id="@+id/tvCityActivityTemp"
+
+            <TextView
+                android:id="@+id/tvCityActivityCityName"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:paddingTop="82dp"
+                android:text="Kiev"
+                android:textAlignment="center"
+                android:textColor="@color/colorLabel"
+                android:textSize="40sp" />
+
+            <ProgressBar
+                android:id="@+id/pbCityActivityLoading"
+                style="@android:style/Widget.Material.Light.ProgressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                tools:targetApi="lollipop" />
+
+            <TextView
+                android:id="@+id/tvCityActivityTemp"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="end"
+                android:layout_weight="1"
+                android:paddingRight="12dp"
+                android:paddingTop="50dp"
+                android:text="-12C"
+                android:textAlignment="textEnd"
+                android:textColor="@color/colorLabel"
+                android:textSize="80sp"
+                tools:targetApi="lollipop" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="-12C"
-            android:textAlignment="textEnd"
-            android:textAppearance="@android:style/TextAppearance.Material.Large"
-            android:textColor="@color/colorLabel"
-            android:textSize="80sp"
-            android:gravity="bottom" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:background="#FAFAFA"
+            android:orientation="vertical">
 
+            <android.support.design.widget.AppBarLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="60dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/tvAppBarSlidePanelLabel"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:padding="12dp"
+                        android:text="Weather for 10 days"
+                        android:textColor="@android:color/white"
+                        android:textSize="20dp" />
+                    <com.github.tibolte.agendacalendarview.calendar.CalendarView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/cvCalendar"
+                        android:layout_marginTop="30dp"
+                        />
+
+                </LinearLayout>
+
+
+            </android.support.design.widget.AppBarLayout>
+
+
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/vpCardPager"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:layout_gravity="bottom"
+                android:clipToPadding="false"
+                android:overScrollMode="never"
+
+                android:paddingBottom="30dp"
+                android:paddingEnd="60dp"
+                android:paddingStart="60dp">
+
+            </android.support.v4.view.ViewPager>
+
+        </LinearLayout>
+
+    </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 </RelativeLayout>
