--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,38 +5,79 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="itea.forecast.MainActivity"
-    >
+    tools:context="itea.forecast.MainActivity">
+
+    <ImageView
+        android:id="@+id/ivEmptyPick"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <ListView
+        android:id="@+id/lvCities"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/lvCities"
-        android:dividerHeight="2dp" />
+        android:divider="@null"
+        android:dividerHeight="10dp"
+        android:layout_below="@+id/toolbar" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:weightSum="10">
+
         <View
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="9"/>
+            android:layout_weight="9" />
 
 
         <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fabAddCity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:clickable="true"
-            android:layout_marginRight="6dp"
-            android:layout_marginBottom="24dp"
             android:layout_gravity="bottom"
-            app:srcCompat="@drawable/ic_add_white_24dp"
-            android:id="@+id/fabAddCity"
-            android:layout_weight="1"/>
+            android:layout_marginBottom="24dp"
+            android:layout_marginRight="6dp"
+            android:layout_weight="1"
+            android:clickable="true"
+            app:srcCompat="@drawable/ic_add_white_24dp" />
 
     </LinearLayout>
+
+    <android.support.v7.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/colorPrimary"
+        android:id="@+id/toolbar">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="12dp"
+                android:layout_marginTop="6dp"
+                android:background="@drawable/ic_refresh_white_24dp"
+                android:id="@+id/ibRefresh"
+                style="@style/Widget.AppCompat.ImageButton"
+                android:scaleType="center"/>
+
+        </RelativeLayout>
+
+    </android.support.v7.widget.Toolbar>
+
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/pbRefreshLoading"
+        android:layout_weight="1"
+        android:layout_alignTop="@+id/ibRefresh"
+        android:layout_toStartOf="@+id/ibRefresh"
+        android:layout_marginEnd="228dp" />
 
 </RelativeLayout>
