--- a/app/src/main/res/layout/list_city_each_item.xml
+++ b/app/src/main/res/layout/list_city_each_item.xml
@@ -1,60 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="75dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="24dp"
+    android:layout_height="290dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <android.support.v7.widget.CardView
+        android:layout_width="340dp"
+        android:layout_height="240dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:padding="20dp"
+        app:cardElevation="2dp"
+        app:cardCornerRadius="5dp">
 
-        <ImageView
-            android:id="@+id/ivBackground"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:scaleType="centerCrop"
-            tools:ignore="ContentDescription" />
-    </LinearLayout>
+            android:orientation="vertical"
+            android:weightSum="4">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:weightSum="2">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="3">
 
-        <TextView
-            android:id="@+id/tvCityName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Test"
-            android:layout_gravity="center"
-            android:layout_marginLeft="12dp"
-            android:textColor="@android:color/background_light"
-            android:textSize="24dp" />
+                <ImageView
+                    android:id="@+id/ivBackground"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentTop="true"
+                    android:layout_centerHorizontal="true"
+                    android:scaleType="centerCrop"
+                    tools:ignore="ContentDescription" />
 
-        <ProgressBar
-            style="?android:attr/progressBarStyle"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/pbCityLoading"
-            android:layout_weight="1"
-            android:visibility="visible" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:background="@drawable/shadow_gradient_bottomtotop"></View>
 
-        <TextView
-            android:id="@+id/tvCityTemp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Test"
-            android:layout_gravity="center"
-            android:layout_marginRight="12dp"
-            android:textAlignment="textEnd"
-            android:textColor="@android:color/background_light"
-            android:textSize="24dp" />
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/tvCityName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:paddingBottom="6dp"
+                    android:text="Test"
+                    android:textColor="@android:color/white"
+                    android:textSize="32dp"
+                    android:paddingLeft="12dp" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:id="@+id/tvCityTemp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="Test"
+                    android:textAlignment="textStart"
+                    android:textColor="@color/text_color_dark"
+                    android:textSize="24dp"
+                    android:paddingLeft="12dp" />
+
+                <ProgressBar
+                    android:id="@+id/pbCityLoading"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="visible" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </android.support.v7.widget.CardView>
 
 </RelativeLayout>
