--- a/app/src/main/res/layout/weather_card.xml
+++ b/app/src/main/res/layout/weather_card.xml
@@ -28,25 +28,16 @@
 
             <TextView
                 android:id="@+id/tvCardNameOfDay"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_weight="1"
                 android:padding="12dp"
                 android:text="Monday:"
                 android:textColor="@android:color/black"
-                android:textSize="20dp" />
+                android:textSize="20dp"
+                android:textAlignment="center" />
 
-            <TextView
-                android:id="@+id/tvCardDate"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_weight="1"
-                android:padding="12dp"
-                android:text="24 Jan 2017"
-                android:textColor="@android:color/black"
-                android:textSize="20dp" />
         </LinearLayout>
 
         <LinearLayout
